# codebase-analysis

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  test_embeddings.py
.streamlit/: config.toml
data/: base_config.yml
src/codebase_analysis/: __init__.py  db_handler.py
src/codebase_analysis/db_utils/: __init__.py  db.py
src/codebase_analysis/file_utils/: __init__.py  breakdown.py  download.py  read.py
src/codebase_analysis/llm/: __init__.py  model.py  prompts.py
